force-app/main/default/objects/Membership__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <label>Days Remaining</label>
    <type>Number</type>
    <formula>End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>