force-app/main/default/objects/Membership__c/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <label>Monthly Fee</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>