force-app/main/default/objects/Membership__c/fields/Total_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions__c</fullName>
    <label>Total Sessions</label>
    <type>Summary</type>
    <summaryForeignKey>Session__c.Membership__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
</CustomField>