force-app/main/default/objects/Membership__c/validationRules/Seats_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Seats_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Seats__c &lt;= 0</errorConditionFormula>
    <errorMessage>Seats must be greater than zero.</errorMessage>
</ValidationRule>